force-app/main/default/objects/BSF_Workday_Staging__c/BSF_Workday_Staging__c.object-meta.xml
<CustomObject>
    <description>This object stores Workday Real ID compliance data received from the Workday RaaS report and acts as an integration staging layer between Workday and Salesforce.</description>
    <label>Workday Staging</label>
    <nameField>
        <displayFormat>RealID-{000000}</displayFormat>
        <label>RealID Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workday Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>