force-app/main/default/objects/BSF_Workday_Staging__c/fields/Anticipated_Leave_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Leave_Return_Date__c</fullName>
    <label>Anticipated Leave Return Date</label>
    <type>Date</type>
</CustomField>