force-app/main/default/objects/BSF_Workday_Staging__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Stores the Workday Employee ID returned from the Workday Real ID RaaS report.
This value is used as the primary key to match the Workday employee record with the Salesforce Resource record</description>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>