force-app/main/default/objects/BSF_Workday_Staging__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Stores the expiration date of the Real ID certification as provided by Workday.</description>
    <label>Real ID Expiration Date</label>
    <type>Date</type>
</CustomField>