force-app/main/default/objects/BSF_Workday_Staging__c/fields/First_Day_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Leave__c</fullName>
    <label>First Day of Leave</label>
    <type>Date</type>
</CustomField>