force-app/main/default/objects/BSF_Workday_Staging__c/fields/Real_ID_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Real_ID_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the employee currently has a valid Real ID certification according to the most recent Workday data.</description>
    <label>Real ID Compliant</label>
    <type>Checkbox</type>
</CustomField>