force-app/main/default/objects/BSF_Workday_Staging__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Salesforce Resource record associated with the employee.
This allows the staging record to be directly linked to the Resource that receives the Real ID compliance update.</description>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipName>Workday_Real_ID_Compliance_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>