force-app/main/default/objects/BSF_Workday_Staging__c/fields/Sync_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sync_Comment__c</fullName>
    <description>Stores a descriptive message explaining the reason for a change.</description>
    <label>Sync Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>