force-app/main/default/objects/BSF_Workday_Staging__c/fields/Workday_Last_Functionally_Updated__c.field-meta.xml
<CustomField>
    <fullName>Workday_Last_Functionally_Updated__c</fullName>
    <description>Stores the value of Last_Functionally_Updated from the Workday report.</description>
    <label>Workday Last Functionally Updated</label>
    <type>DateTime</type>
</CustomField>