force-app/main/default/objects/BSF_Workday_Staging__c/fields/Workday_Record_Created_Moment__c.field-meta.xml
<CustomField>
    <fullName>Workday_Record_Created_Moment__c</fullName>
    <description>Stores the Created_Moment field returned by Workday.
This field represents when the Real ID record was initially created in Workday.

Used for audit purposes and troubleshooting.</description>
    <label>Workday Record Created Moment</label>
    <type>DateTime</type>
</CustomField>