force-app/main/default/objects/BSF_Workday_Staging__c/recordTypes/Leave_Report.recordType-meta.xml
<RecordType>
    <fullName>Leave_Report</fullName>
    <active>true</active>
    <label>Leave Report</label>
</RecordType>