force-app/main/default/objects/BSF_Workday_Staging__c/recordTypes/Real_ID_Compliance.recordType-meta.xml
<RecordType>
    <fullName>Real_ID_Compliance</fullName>
    <active>true</active>
    <label>Real ID Compliance</label>
</RecordType>